--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.22",
+    "vant": "^3.6.3",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
     "less": "^4.1.3",
+    "unplugin-vue-components": "^0.22.7",
     "vite": "^3.1.3"
   }
 }
