--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
     "less": "^4.1.3",
+    "postcss-px-to-viewport": "^1.1.1",
     "unplugin-vue-components": "^0.22.7",
     "vite": "^3.1.3"
   }
